--- a/src/views/data/dleft/personal/index.scss
+++ b/src/views/data/dleft/personal/index.scss
@@ -7,6 +7,7 @@
     .personal-body{
         height: 100%;
         width: 100%;
+        cursor: pointer;
         .left{
             float: left;
             width: 120px;
